--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,7 +29,7 @@
                 </Border.Background>
             </Border>
 
-            <Border CornerRadius="0 25 25 0" MouseDown="Border_MouseDown" Grid.Column="1">
+            <Border CornerRadius="0 25 25 0" MouseDown="Border_MouseDown" Margin="218,0,-2,0" Grid.ColumnSpan="2">
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                         <GradientStop Color="#3E3A65" Offset="0" />
@@ -56,11 +56,15 @@
 
                 <Button Style="{StaticResource activeMenuButton}">
                     <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="53*"/>
+                            <ColumnDefinition Width="34*"/>
+                        </Grid.ColumnDefinitions>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                             <fa:ImageAwesome Icon="FolderOutline" Style="{StaticResource buttonIcon}" />
                             <TextBlock Text="Wallet" Style="{StaticResource buttonText}" />
                         </StackPanel>
-                        <fa:ImageAwesome Icon="AngleRight" HorizontalAlignment="Right" Visibility="Visible" Style="{StaticResource buttonIconExpand}" />
+                        <fa:ImageAwesome Icon="AngleRight" HorizontalAlignment="Left" Visibility="Visible" Style="{StaticResource buttonIconExpand}" Grid.Column="1" Margin="58,4,0,4" />
                     </Grid>
                 </Button>
 
@@ -94,7 +98,7 @@
                     </Grid>
                 </Button>
 
-                <Button Style="{StaticResource menuButton}">
+                <Button Style="{StaticResource menuButton}" Width="204" Click="Button_Click">
                     <Grid>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                             <fa:ImageAwesome Icon="CommentOutline" Style="{StaticResource buttonIcon}" />
@@ -152,21 +156,13 @@
                 <!--Transfer Panel-->
                 <Border Style="{StaticResource border}" Margin="20 120 20 20">
                     <StackPanel Margin="10 88 10 20">
-                        <TextBlock Text="Transfer" Foreground="#fcfcfc" TextAlignment="Center" FontSize="34" FontWeight="SemiBold"/>
 
                         <Grid Margin="0 12 0 22">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-
-                            <Button Style="{StaticResource activeTabButton}" Content="Send"/>
-                            <Button Style="{StaticResource tabButton}" Content="Apply for" Grid.Column="1"/>
                         </Grid>
-
-                        <TextBlock Text="Pay to" Style="{StaticResource textLabel}" />
-                        <TextBox Margin="0 10 0 5" Text="fad23b456g56fsd2sdf4sdj76urdetgx22d" TextAlignment="Center"/>
-                        <TextBlock Text="Please enter the wallet id or destination email" FontSize="9" Foreground="#e0e0e0" TextAlignment="Center" Opacity="0.5" Margin="0 0 0 20"/>
 
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -178,52 +174,12 @@
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-
-                            <TextBlock Text="Amount" Style="{StaticResource textLabel}" />
-                            <TextBox Grid.Row="1" Margin="0 10 5 20" Text="$ 300.00"/>
-
-                            <TextBlock Text="Reason" Style="{StaticResource textLabel}" Grid.Column="1" />
-                            <TextBox Grid.Row="1" Grid.Column="1" Margin="5 10 0 20" Text="Pay for games"/>
-
-                            <TextBlock Text="Commision : $3" Style="{StaticResource textLabel}" Grid.Row="2" Margin="0 4 0 3"/>
-                            <TextBlock Text="Total : $300.00" Style="{StaticResource textLabel}" Grid.Row="2" Grid.Column="1" Margin="0 4 0 3"/>
                         </Grid>
-
-                        <Button Style="{StaticResource sendButton}">
-                            <StackPanel Orientation="Horizontal">
-                                <fa:ImageAwesome Icon="SendOutline" Style="{StaticResource whiteIcon}" Grid.Row="3" VerticalAlignment="Center" />
-                                <TextBlock Text="Send" Margin="10 0 0 0" FontWeight="SemiBold"/>
-                            </StackPanel>
-                        </Button>
 
                     </StackPanel>
                 </Border>
 
                 <!--Bank Card-->
-                <Border Style="{StaticResource cardBorder}" Margin="90 40 90 0">
-                    <Border.Background>
-                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                            <GradientStop Color="#D489FF" Offset="-0.2" />
-                            <GradientStop Color="#7985FF" Offset="0.5" />
-                            <GradientStop Color="#6AD8FD" Offset="1" />
-                        </LinearGradientBrush>
-                    </Border.Background>
-
-                    <Grid>
-                        <fa:ImageAwesome Icon="Exchange" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" Opacity="0.9" Width="25" Margin="15 8 0 0"/>
-                        <fa:ImageAwesome Icon="CheckCircle" HorizontalAlignment="Right" VerticalAlignment="Top" Foreground="White" Width="25" Margin="0 5 53 0"/>
-                        <TextBlock Text="Wally" FontWeight="Bold" Foreground="#FFFFFF" FontSize="12" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 10 15 0"/>
-
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <TextBlock Text="5648" Style="{StaticResource bankCardNumber}"/>
-                            <TextBlock Text="3500" Style="{StaticResource bankCardNumber}"/>
-                            <TextBlock Text="9111" Style="{StaticResource bankCardNumber}"/>
-                            <TextBlock Text="6100" Style="{StaticResource bankCardNumber}"/>
-                        </StackPanel>
-
-                        <TextBlock Text="$ 8,520,00" Style="{StaticResource textLabel}" FontSize="20" FontWeight="SemiBold" VerticalAlignment="Bottom" Margin="13 0 0 5" />
-                    </Grid>
-                </Border>
             </Grid>
 
             <!--Info Panel-->
@@ -231,22 +187,15 @@
 
                 <!--Top Menu-->
                 <StackPanel Orientation="Horizontal" Margin="20 40 20 0" HorizontalAlignment="Right">
-                    
-                    <Button Style="{StaticResource topMenuButton}" Margin="10 0 0 0" Width="300" Height="50">
-                        <StackPanel Orientation="Horizontal">
-                            <fa:ImageAwesome Icon="Sliders" Style="{StaticResource topMenuIcon}"/>
-                            <TextBlock Text="Add Filters" VerticalAlignment="Center" FontSize="14" Margin="8 0 0 0"/>
-                        </StackPanel>
-                    </Button>
-                    
+
                     <Button Style="{StaticResource topMenuButton}" Margin="10 0 0 0">
                         <fa:ImageAwesome Icon="BellOutline" Style="{StaticResource topMenuIcon}"/>
                     </Button>
-                    
+
                     <Button Style="{StaticResource topMenuButton}" Margin="10 0 0 0">
                         <fa:ImageAwesome Icon="Search" Style="{StaticResource topMenuIcon}"/>
                     </Button>
-                    
+
                 </StackPanel>
 
                 <!--Info Card-->
@@ -257,34 +206,12 @@
                             <GradientStop Color="#C77AFF" Offset="1" />
                         </LinearGradientBrush>
                     </Border.Background>
-                    
+
                     <Grid>
-                        <TextBlock Text="Balance" Style="{StaticResource textLabel}" VerticalAlignment="Top" Margin="15 8 0 0" FontSize="14" FontWeight="SemiBold"/>
-                        <TextBlock Text="$ 9,150,00" Style="{StaticResource textLabel}" FontSize="24" FontWeight="SemiBold" VerticalAlignment="Center" Margin="15 0 0 10" />
 
-                        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0 8 10 0">
-                            <Button Style="{StaticResource fillButton}" >
-                                <fa:ImageAwesome Icon="Dollar"  Style="{StaticResource whiteIcon}" Width="10" Height="10" />
-                            </Button>
+                        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0 8 10 0"/>
 
-                            <Button Style="{StaticResource fillButton}" Margin="0 5 0 0">
-                                <fa:ImageAwesome Icon="Percent"  Style="{StaticResource whiteIcon}" Width="10" Height="10" />
-                            </Button>
-                        </StackPanel>
-
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="15 0 0 5">
-                            <Button Style="{StaticResource fillButton}">
-                                <fa:ImageAwesome Icon="ArrowUp"  Style="{StaticResource whiteIcon}" Width="10" Height="10" />
-                            </Button>
-
-                            <TextBlock Text="+ $ 620.12" Style="{StaticResource textLabel}" Margin="10 0 20 0" FontWeight="SemiBold" VerticalAlignment="Center"/>
-
-                            <Button Style="{StaticResource fillButton}">
-                                <fa:ImageAwesome Icon="ArrowDown"  Style="{StaticResource whiteIcon}" Width="10" Height="10" />
-                            </Button>
-
-                            <TextBlock Text="- $ 920.60" Style="{StaticResource textLabel}" Margin="10 0 0 0" FontWeight="SemiBold" VerticalAlignment="Center"/>
-                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="15 0 0 5"/>
                     </Grid>
                 </Border>
 
@@ -301,26 +228,11 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-
-                        <TextBlock Text="Information" Foreground="#fcfcfc" FontSize="16" FontWeight="SemiBold" Grid.ColumnSpan="3" Margin="0 0 0 18"/>
-
-                        <Button Style="{StaticResource button}" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.ColumnSpan="3">
-                            <fa:ImageAwesome Icon="Edit" Style="{StaticResource whiteIcon}" Width="14" Height="12" />
-                        </Button>
-
-                        <fa:ImageAwesome Icon="MapMarker" Style="{StaticResource whiteIcon}" Grid.Row="1" VerticalAlignment="Top" />
-                        <fa:ImageAwesome Icon="Folder" Style="{StaticResource whiteIcon}" Grid.Row="2" VerticalAlignment="Top" />
-
-                        <TextBlock Text="Address :" Style="{StaticResource textLabel}" Grid.Column="1" Grid.Row="1" Margin="10 0 10 18" />
-                        <TextBlock Text="Wallet ID :" Style="{StaticResource textLabel}" Grid.Column="1" Grid.Row="2" Margin="10 0 10 0" />
-
-                        <TextBlock Text="Peru" Style="{StaticResource textLabel}" Grid.Column="2" Grid.Row="1" />
-                        <TextBlock Text="3d2csd9ut7fvcepr65v83ndeyqt89bczb" Style="{StaticResource textLabel}" Grid.Column="2" Grid.Row="2" />
                     </Grid>
                 </Border>
 
                 <!--Security Card-->
-                <Border Style="{StaticResource border}" Margin="20 0 20 0">
+                <Border Style="{StaticResource border}" Margin="20 0 20 0" Height="208">
                     <Grid Margin="15 10">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
@@ -334,23 +246,9 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Text="Security" Foreground="#fcfcfc" FontWeight="SemiBold" FontSize="16" Grid.ColumnSpan="3" Margin="0 0 0 15" />
-
-                        <Button Style="{StaticResource button}" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.ColumnSpan="3">
-                            <fa:ImageAwesome Icon="EllipsisH" Style="{StaticResource whiteIcon}" Width="14" Height="12" />
-                        </Button>
-
                         <fa:ImageAwesome Icon="Shield" Style="{StaticResource whiteIcon}" Grid.Row="1" VerticalAlignment="Center" />
                         <fa:ImageAwesome Icon="Key" Style="{StaticResource whiteIcon}" Grid.Row="2" VerticalAlignment="Center" />
                         <fa:ImageAwesome Icon="Lock" Style="{StaticResource whiteIcon}" Grid.Row="3" VerticalAlignment="Center" />
-
-                        <TextBlock Text="2FA Enabled" Style="{StaticResource textLabel}" Grid.Column="1" Grid.Row="1" Margin="10 0 0 0" VerticalAlignment="Center" />
-                        <TextBlock Text="Key" Style="{StaticResource textLabel}" Grid.Column="1" Grid.Row="2" Margin="10 0 0 0" VerticalAlignment="Center" />
-                        <TextBlock Text="Password" Style="{StaticResource textLabel}" Grid.Column="1" Grid.Row="3" Margin="10 0 0 0" VerticalAlignment="Center" />
-
-                        <Button Style="{StaticResource button}" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Grid.Row="1" Content="Change" Margin="0 5 0 5" />
-                        <Button Style="{StaticResource button}" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Grid.Row="2" Content="Change" Margin="0 5 0 5"/>
-                        <Button Style="{StaticResource button}" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Grid.Row="3" Content="Change" Margin="0 5 0 5"/>
                     </Grid>
                 </Border>
 
