--- a/App.xaml
+++ b/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:local="clr-namespace:Wallet_Payment"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 
@@ -312,7 +313,8 @@
                 </Setter.Value>
             </Setter>
         </Style>
-
+        <local:BarWidthConverter x:Key="BarWidthConverter"/>
 
     </Application.Resources>
+
 </Application>
