--- a/DrawCardGame/Views/DrawCardWindow.xaml
+++ b/DrawCardGame/Views/DrawCardWindow.xaml
@@ -1,75 +1,85 @@
 ﻿<Window x:Class="DrawCardGame.DrawCardWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DrawCardGame"
-        mc:Ignorable="d"
-        Title="DrawCardWindow" Height="1000" Width="1000"
+        Title="抽卡界面" Height="300" Width="400"
+        Background="White"
         Loaded="Window_Loaded">
 
-    <Grid Margin="0,0,68,-5">
+    <Grid Margin="5">
         <!-- 顶部标题 -->
-        <TextBlock HorizontalAlignment="Center"
-           Margin="0,38,0,0"
-           TextWrapping="Wrap"
-           VerticalAlignment="Top"
-           FontSize="36"
-           Text="获得奖励"/>
+        <TextBlock Text="获得奖励"
+                   FontSize="20"
+                   FontWeight="Bold"
+                   HorizontalAlignment="Center"
+                   Margin="0,5,0,0"
+                   VerticalAlignment="Top"/>
 
-        <!-- ✅ 倒计时文字 -->
+        <!-- 倒计时文字 -->
         <TextBlock x:Name="CountdownText"
-           FontSize="20"
-           HorizontalAlignment="Center"
-           VerticalAlignment="Top"
-           Margin="0,85,0,0"
-           Text="请在 30 秒内抽卡"
-           Foreground="Red"/>
+                   Text="请在 30 秒内抽卡"
+                   FontSize="14"
+                   Foreground="Red"
+                   HorizontalAlignment="Center"
+                   Margin="0,30,0,0"
+                   VerticalAlignment="Top"/>
 
+        <!-- 卡片框 -->
+        <Grid VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,0,0,30">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="4*" />
+            </Grid.ColumnDefinitions>
 
-        <!-- 图片下方按钮 -->
-        <Button Content="开始抽卡"
-                Width="160" Height="50"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Bottom"
-                Margin="388,0,0,84"
-                FontSize="18"
-                Click="DrawCardButton_Click"/>
-
-        <!-- 两个卡片框 向左右展开 向上提起 -->
-        <StackPanel Orientation="Horizontal"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    Margin="177,0,0,0">
             <!-- 卡片 1 -->
-            <Border Width="150" Height="220" Background="#EEE"
-                    BorderBrush="Black" BorderThickness="2" CornerRadius="10"
-                    Margin="0,0,250,100">
+            <Border Grid.Column="0" Width="80" Height="120" Background="#EEE"
+                    BorderBrush="Black" BorderThickness="1" CornerRadius="6"
+                    HorizontalAlignment="Right" Margin="0,0,40,0">
                 <Image x:Name="Card1Image"
-                       Width="130" Height="200"
+                       Width="70" Height="110"
                        Stretch="Uniform"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"/>
             </Border>
 
             <!-- 卡片 2 -->
-            <Border Width="150" Height="220" Background="#EEE"
-                    BorderBrush="Black" BorderThickness="2" CornerRadius="10"
-                    Margin="40,0,40,100">
+            <Border Grid.Column="2" Width="80" Height="120" Background="#EEE"
+                    BorderBrush="Black" BorderThickness="1" CornerRadius="6"
+                    HorizontalAlignment="Left" Margin="40,0,0,0">
                 <Image x:Name="Card2Image"
-                       Width="130" Height="200"
+                       Width="70" Height="110"
                        Stretch="Uniform"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"/>
             </Border>
-        </StackPanel>
+        </Grid>
 
-        <!-- 将箱子图像放在最底部位置（卡片框原来位置） -->
-        <Image Source="../Assets/70cb140ab63a37e7d6e669d5ef1c698453520970.png"
-               Height="300"
-               VerticalAlignment="Top"
-               Margin="316,355,316,0"/>
-        <Button Content="卡片库" HorizontalAlignment="Left" Margin="47,143,0,0" VerticalAlignment="Top" Height="61" Width="111" Click="OpenCardLibrary_Click"/>
+        <!-- 抽卡按钮 -->
+        <Button Content="开始抽卡"
+                Width="130" Height="35"
+                FontSize="14"
+                Click="DrawCardButton_Click"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Margin="0,0,0,10"/>
+
+        <!-- 箱子图像（放大） -->
+        <Image Source="pack://application:,,,/Assets/70cb140ab63a37e7d6e669d5ef1c698453520970.png"
+               Width="150"
+               Height="94"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Bottom"
+               Margin="0,0,0,45"/>
     </Grid>
 </Window>
+
+
+
+
+
+
+
+
+
+
 
